# CoffeeGL

./: CMakeLists.txt  DeltaTime.cpp  Image.cpp  LICENSE  README.md  Shader.cpp  Triangle.cpp  imgui.ini  main.cpp  main2.cpp  vcpkg.json
assets/shaders/: hello-tri-color.frag  hello-tri-color.vert  hello-tri-uniform.vert  hello-tri.frag  hello-tri.vert  standard.frag  standard.vert
include/: DeltaTime.hpp  Image.hpp  OpenGLHeaders.hpp  Rectangle.hpp  Shader.hpp  Triangle.hpp  Vertex.hpp
include/Editor/: Console.hpp  DockableWindow.hpp  Viewport.hpp
